# cppy

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/cppy/: builtins.h  cppy.h  datetime.h  exception.h  int.h  io.h  io.hpp  list.hpp  malloc.h  platform.h  random.h  set.h  set.hpp  str.h  thread.h  thread.hpp  typing.hpp  vector.h  vector.hpp
include/cppy/internal/: declare.h  internal.h
src/: builtins.cpp  datetime.cpp  exception.cpp  int.cpp  io.cpp  platform.cpp  random.cpp  str.cpp  thread.cpp
test/: CMakeLists.txt  test.cpp
